--- a/main.html
+++ b/main.html
@@ -11,6 +11,13 @@
 <body>
 
 <div class="main">
+    <div class="text-context">
+        <div class="logo"></div>
+        <div class="instructions">
+            <p>Click and hold Ryu to make him throw a hadouken</p>
+            <p>Press and hold down the 'x' key to make him strike a cool pose</p>
+        </div>
+    </div>
     <div class="ryu">
         <div class="ryu-still"></div>
         <div class="ryu-ready"></div>
@@ -18,6 +25,7 @@
         <div class="ryu-cool"></div>
     </div>
     <div class="hadouken"></div>
+    
 </div>
 <audio id="hadouken-sound" src="sound/hadouken.mp3">
 
